[gd_scene load_steps=7 format=3 uid="uid://dvgmmsu1php7b"]

[ext_resource type="PackedScene" uid="uid://dqvmyatymqdtd" path="res://src/game_world/objects/game_object.tscn" id="1_1xgud"]
[ext_resource type="Script" path="res://src/game_world/objects/dark_area/dark_area.gd" id="1_k4e1t"]
[ext_resource type="AudioStream" uid="uid://d4gobjhdd0w2p" path="res://assets/sounds/engine_2.ogg" id="3_uvn7c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s36h"]
resource_local_to_scene = true
size = Vector2(1920, 1664)

[sub_resource type="Gradient" id="Gradient_0h6kv"]
offsets = PackedFloat32Array(0.580087, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tuk6c"]
gradient = SubResource("Gradient_0h6kv")
width = 1920
height = 1080
fill = 2
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="DarkArea" instance=ExtResource("1_1xgud")]
position = Vector2(960, 832)
script = ExtResource("1_k4e1t")

[node name="StaticBody2D" parent="." index="0"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="StaticBody2D" index="0"]
shape = SubResource("RectangleShape2D_8s36h")

[node name="Light" type="PointLight2D" parent="." index="1"]
position = Vector2(0, 2.86102e-05)
scale = Vector2(1, 1.54074)
blend_mode = 1
texture = SubResource("GradientTexture2D_tuk6c")

[node name="Area2D" type="Area2D" parent="." index="2"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("RectangleShape2D_8s36h")

[node name="MechDamageTimer" type="Timer" parent="." index="3"]
wait_time = 0.1

[node name="DisablePlayer" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("3_uvn7c")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="MechDamageTimer" to="." method="_on_mech_damage_timer_timeout"]
